Got downloading YouTube-DL, routing with express, and pushing to SQLite DB working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
   "cSpell.words": [
     "commitlint",
+    "distube",
     "inversify",
     "markdownlint",
+    "tubularr",
     "youtube"
   ]
 }
