--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tubular",
+  "name": "tubularr",
   "version": "1.0.0",
   "description": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GoogilyBoogily/down-the-tube.git"
+    "url": "https://github.com/https://github.com/Tubularr/tubularr-api.git"
   },
   "license": "ISC",
   "author": "",
@@ -21,9 +21,12 @@
     "markdownlint": "markdownlint **/*.md"
   },
   "dependencies": {
-    "@distube/youtube-dl": "2.2.2",
+    "express": "4.17.1",
     "inversify": "5.1.1",
     "reflect-metadata": "0.1.13",
+    "sqlite": "4.0.23",
+    "sqlite3": "5.0.2",
+    "uuid": "3.4.0",
     "youtube-dl-wrap": "2.1.0"
   },
   "devDependencies": {
