--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/https://github.com/Tubularr/tubularr-api.git"
+    "url": "https://github.com/Tubularr/tubularr-api.git"
   },
   "license": "ISC",
   "author": "",
