Pushing some local changes to things

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "outDir": "./dist",
     "removeComments": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "target": "ES6"
   }
