--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "markdownlint": "markdownlint **/*.md"
   },
   "dependencies": {
-    "body-parser": "1.19.0",
     "class-validator": "0.13.1",
     "express": "4.17.1",
+    "ffmpeg-static": "4.4.0",
     "inversify": "5.1.1",
     "reflect-metadata": "0.1.13",
     "sqlite": "4.0.23",
     "sqlite3": "5.0.2",
-    "uuid": "3.4.0",
+    "uuid": "8.3.2",
     "youtube-dl-wrap": "2.1.0"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "@babel/plugin-proposal-decorators": "7.13.5",
     "@babel/preset-env": "7.13.5",
     "@babel/preset-typescript": "7.13.0",
-    "@types/express": "github:types/express",
+    "@types/express": "4.17.13",
     "@types/jest": "26.0.24",
     "@types/node": "14.17.5",
     "@typescript-eslint/eslint-plugin": "4.28.3",
